// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders BodyText One 1`] = `
<Text
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "fontSize": 16,
      "letterSpacing": 0.5,
      "lineHeight": 16,
    }
  }
  type={1}
  typographyStyles={
    Object {
      "fontSize": 16,
      "letterSpacing": 0.5,
      "lineHeight": 16,
    }
  }
>
  BodyText
</Text>
`;

exports[`it renders BodyText One when a value isnt 1 or 2 1`] = `
<Text
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "fontSize": 16,
      "letterSpacing": 0.5,
      "lineHeight": 16,
    }
  }
  type={3}
  typographyStyles={
    Object {
      "fontSize": 16,
      "letterSpacing": 0.5,
      "lineHeight": 16,
    }
  }
>
  BodyText
</Text>
`;

exports[`it renders BodyText Two 1`] = `
<Text
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "fontSize": 14,
      "letterSpacing": 0.25,
      "lineHeight": 14,
    }
  }
  type={2}
  typographyStyles={
    Object {
      "fontSize": 14,
      "letterSpacing": 0.25,
      "lineHeight": 14,
    }
  }
>
  BodyText
</Text>
`;
